# tf-remote

./: .gitignore  README.md  brain-dump.ipynb  shell.nix  std.toml  utils.sh
client/: README.md  build.sh  pyproject.toml  shell.nix
client/src/: prepare.py
client/src/tf_remote/: interf.py
info/arch/: make_diagram.py
info/doc/: reference.md
info/img/: arch_mermaid.md
server/: Cargo.toml  shell.nix
server/db/: create.sql  db_utils.sh  reset_db.sh
server/db/postgres/: run_dockerd.sh  setup.sh
server/db/scripts/: create.sql  test.sql
server/src/: main.rs
