[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "tf_remote"
version = "0.0.1"
authors = [
  { name="Lucas Quaresma", email="lucas.quaresma1@gmail.com" },
]
description = "Under construction. Tesorflow atomated server-side trainning pipelines."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/luksquaresma/tf_remote"
Issues = "https://github.com/luksquaresma/tf_remote/issues"