[project]
name = "tf_remote"
version = "0.0.1"
description = "Under construction. Tesorflow atomated server-side trainning pipelines."
authors = [
    {name = "Lucas Quaresma", email = "lucas.quaresma1@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "build>=1.2.1",
    "pandas>=2.2.2",
    "numpy>=2.0.0",
    "plotly>=5.22.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Unlicense"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.urls]
Homepage = "https://github.com/luksquaresma/tf_remote"
Issues = "https://github.com/luksquaresma/tf_remote/issues"